Add initial files

--- a/index.html
+++ b/index.html
@@ -325,32 +325,32 @@
         <div class="underline os-animation visibility" data-animation="zoomIn" data-delay=".1s"></div>
         <div class="wrapper">
           <div class="row text-center">
-            <div class="col-sm-6 col-md-4 col-xl-2 achievement-item os-animation visibility" data-animation="zoomIn" data-delay=".2s">
+            <div class="col-sm-6 col-md-4 col-xl-2 achievement-item os-animation visibility" data-animation="bounceIn" data-delay=".15s">
               <p><i class="fas fa-thumbs-up"></i></p>
               <h3>100%</h3>
               <p>Zadowolonych klientów</p>
             </div>
-            <div class="col-sm-6 col-md-4 col-xl-2 achievement-item os-animation visibility" data-animation="zoomIn" data-delay=".3s">
+            <div class="col-sm-6 col-md-4 col-xl-2 achievement-item os-animation visibility" data-animation="bounceIn" data-delay=".3s">
               <p><i class="fas fa-trophy"></i></p>
               <h3>37</h3>
               <p>Zdobytych nagród</p>
             </div>
-            <div class="col-sm-6 col-md-4 col-xl-2 achievement-item os-animation visibility" data-animation="zoomIn" data-delay=".4s">
+            <div class="col-sm-6 col-md-4 col-xl-2 achievement-item os-animation visibility" data-animation="bounceIn" data-delay=".5s">
               <p><i class="fas fa-users"></i></p>
               <h3>200</h3>
               <p>Pracowników</p>
             </div>
-            <div class="col-sm-6 col-md-4 col-xl-2 achievement-item os-animation visibility" data-animation="zoomIn" data-delay=".5s">
+            <div class="col-sm-6 col-md-4 col-xl-2 achievement-item os-animation visibility" data-animation="bounceIn" data-delay=".4s">
               <p><i class="fas fa-building"></i></p>
               <h3>10</h3>
               <p>Biur zlokalizowanych na całym świecie</p>
             </div>
-            <div class="col-sm-6 col-md-4 col-xl-2 achievement-item os-animation visibility" data-animation="zoomIn" data-delay=".6s">
+            <div class="col-sm-6 col-md-4 col-xl-2 achievement-item os-animation visibility" data-animation="bounceIn" data-delay=".75s">
               <p><i class="fas fa-terminal"></i></p>
               <h3>1000</h3>
               <p>Stworzonych stron</p>
             </div>
-            <div class="col-sm-6 col-md-4 col-xl-2 achievement-item os-animation visibility" data-animation="zoomIn" data-delay=".7s">
+            <div class="col-sm-6 col-md-4 col-xl-2 achievement-item os-animation visibility" data-animation="bounceIn" data-delay=".8s">
               <p><i class="fas fa-smile"></i></p>
               <h3>1.000.000</h3>
               <p>Fanów na mediach społecznościowych</p>
@@ -359,17 +359,40 @@
         </div>
         </div>
     </section>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
+    <!-- Sixth section contact -->
+    <section id="contact" class="scroll-fix">
+      <div class="jumbotron jumbotron-fluid">
+        <h2>kontakt</h2>
+        <div class="underline"></div>
+        <div class="wrapper row text-center contact-us">
+          <div class="contact-item col-sm-6 col-lg-4 order-1 order-lg-1">
+            <h3>główna siedziba</h3>
+            <p>ul. Prosta 1</p>
+            <p>00-000 Poznań</p>
+            <p>+48 000 000 000</p>
+            <p>mail@mail.com</p>
+          </div>
+          <div class="contact-item social-media col-sm-12 col-lg-4 oredr-0 order-lg-1">
+            <h3>social media</h3>
+            <a href="#"><i class="fab fa-facebook-f"></i></a>
+            <a href="#"><i class="fab fa-twitter"></i></a>
+            <a href="#"><i class="fab fa-linkedin-in"></i></a>
+          </div>
+          <div class="contact-item col-sm-6 col-lg-4 order-1 order-lg-1">
+            <h3>niemiecka siedziba</h3>
+            <p>Sonnige Straße 1</p>
+            <p>00-000 Berlin</p>
+            <p>+49 000 000 000</p>
+            <p>mail@mail.com</p>
+          </div>
+        </div>
+        <div class="hero-bg"></div>
+      </div>
+    </section>
   </main>
+  <footer>
+    <p>&copy; Copywright 2020 AriesWeb</p>
+  </footer>
   <!-- Optional JavaScript -->
   <!-- jQuery first, then Popper.js, then Bootstrap JS -->
   <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
