Little changes for training

--- a/index.html
+++ b/index.html
@@ -409,8 +409,7 @@
   <script src="slick/slick.min.js"></script>
   <script src="js/main.js"></script>
   <noscript>
-    <p>Aby w pełni można było korzystać z Naszej strony potzrebne jest uruchomienie javascriptu w opcjach przeglądarki.
-    </p>
+    <p>Strona wykorzystuje JavaScript to poprawnego jej wyświetlenia prosimy uruchomić JavaScript w ustawieniach przeglądarki.</p>
   </noscript>
 </body>
 
